managed/apps/ai/components/discovery/base/deploy-discovery-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-api
  namespace: ai
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: ai
      component: discovery
      container: api
  replicas: 1
  template:
    metadata:
      labels:
        app: ai
        component: discovery
        container: api
    spec:
      containers:
        - name: api
          image: gcr.io/tf-ops-cicd-97aadd/ai/discovery/main/api:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: "/etc/secrets/openai"
              name: openai
              readOnly: true
      volumes:
        - name: openai
          secret:
            secretName: discovery-api-openai
      imagePullSecrets:
        - name: image-pull-secret
