managed/apps/ai/components/discovery/base/deploy-discovery-static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-static
  namespace: ai
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: ai
      component: discovery
      container: static
  replicas: 2
  template:
    metadata:
      labels:
        app: ai
        component: discovery
        container: static
    spec:
      containers:
        - name: static
          image: gcr.io/tf-ops-cicd-97aadd/ai/discovery/main/static:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 80
          
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      imagePullSecrets:
        - name: image-pull-secret
