managed/apps/ai/components/discovery/base/svc-discovery-api-api.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "discovery-api-api"
  namespace: ai
spec:
  selector:
    app: ai
    component: discovery
    container: api
  ports:
    - name: "api"
      protocol: "TCP"
      port: 8080
